--- a/Views/SettingsView.xaml
+++ b/Views/SettingsView.xaml
@@ -1,97 +1,141 @@
-﻿<UserControl x:Class="Flow.Launcher.Plugin.OneNote.SettingsView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Flow.Launcher.Plugin.OneNote"
-             xmlns:ui="http://schemas.modernwpf.com/2019"
-             xmlns:vm="clr-namespace:Flow.Launcher.Plugin.OneNote.ViewModels" 
-             d:DataContext="{d:DesignInstance Type=vm:SettingsViewModel}"
-             mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel Margin="60,0,10,0" Orientation="Vertical">
+﻿<UserControl
+    x:Class="Flow.Launcher.Plugin.OneNote.SettingsView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Flow.Launcher.Plugin.OneNote"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    xmlns:ui="http://schemas.modernwpf.com/2019"
+    xmlns:vm="clr-namespace:Flow.Launcher.Plugin.OneNote.ViewModels"
+    d:DataContext="{d:DesignInstance Type=vm:SettingsViewModel}"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ui:ThemeResources />
+                <ui:XamlControlsResources />
+            </ResourceDictionary.MergedDictionaries>
+            <ObjectDataProvider
+                x:Key="TimeTypeConverter"
+                MethodName="GetValues"
+                ObjectType="{x:Type sys:Enum}">
+                <ObjectDataProvider.MethodParameters>
+                    <x:Type TypeName="local:TimeType" />
+                </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider>
+            <Style
+                x:Key="TimeTypeStyle"
+                BasedOn="{StaticResource {x:Type ComboBox}}"
+                TargetType="{x:Type ComboBox}">
+                <Setter Property="Background" Value="Transparent" />
+                <!--  Search: wpf inherit a template  -->
+                <!--<Setter Property="Template">
+                    <Setter.Value></Setter.Value>
+                </Setter>-->
+                <Style.Resources>
+                    <Style TargetType="{x:Type ToggleButton}">
+                        <Setter Property="BorderBrush" Value="Transparent" />
+                    </Style>
+                </Style.Resources>
+                <Style.Triggers />
+            </Style>
+        </ResourceDictionary>
+
+    </UserControl.Resources>
+    <StackPanel Margin="60,10,10,10" Orientation="Vertical">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition MinHeight="35"></RowDefinition>
-                <RowDefinition Height="35"></RowDefinition>
-                <RowDefinition Height="35"></RowDefinition>
+                <RowDefinition MinHeight="35" />
+                <RowDefinition Height="35" />
+                <RowDefinition Height="35" />
             </Grid.RowDefinitions>
-
-            <Expander VerticalContentAlignment="Center"
-                      Grid.Row="0">
+            <Expander
+                Grid.Row="0"
+                MinHeight="35"
+                VerticalAlignment="Center"
+                VerticalContentAlignment="Center">
                 <Expander.Header>
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
-                        <ui:ToggleSwitch IsOn ="{Binding Settings.FastMode}"
-                                         OffContent="Fast Mode"
-                                         OnContent="Fast Mode"
-                                         Margin="0,0,30,0"
-                                         VerticalContentAlignment="Center">
-                        </ui:ToggleSwitch>
-                        <TextBlock VerticalAlignment="Center"
-                                   Margin="0,0,10,0">
-                                COM Object Release Timeout
+                    <!--  Replace with wrap panel  -->
+                    <WrapPanel VerticalAlignment="Center" Orientation="Horizontal">
+                        <ui:ToggleSwitch
+                            Margin="0,0,30,0"
+                            HorizontalContentAlignment="Left"
+                            VerticalContentAlignment="Center"
+                            IsOn="{Binding Settings.FastMode}"
+                            OffContent="Fast Mode [Off]"
+                            OnContent="Fast Mode [On]" />
+                        <TextBlock Margin="0,0,10,0" VerticalAlignment="Center">
+                            COM Object Release Timeout
                         </TextBlock>
-                        <ui:NumberBox Value="{Binding Settings.COMReleaseTimeout}"
-                                      PlaceholderText="1000"
-                                      SpinButtonPlacementMode="Compact"
-                                      SmallChange="1"
-                                      MaxWidth="110"
-                                      MinWidth="60"
-                                      Margin="0,0,5,0"
-                                      VerticalContentAlignment="Center"
-                                      VerticalAlignment="Center">
-                        </ui:NumberBox>
-                        <ComboBox VerticalAlignment="Center"
-                                  HorizontalAlignment="Left"
-                                  HorizontalContentAlignment="Left"
-                                  MinWidth="90"
-                                  Margin="0,0,10,0"
-                                  ToolTip="Units"
-                                  ItemsSource="{Binding TimeTypes}"
-                                  SelectedItem="{Binding Settings.TimeType}">
-                        </ComboBox>
-                        <Button VerticalAlignment="Center"
-                                VerticalContentAlignment="Center">
-                            <Viewbox MaxHeight="30"
-                                     MaxWidth="30">
-                                <ui:SymbolIcon Symbol="Refresh"></ui:SymbolIcon>
-                            </Viewbox>
+                        <ui:NumberBox
+                            MinWidth="60"
+                            MaxWidth="110"
+                            Margin="0,0,5,0"
+                            VerticalAlignment="Center"
+                            VerticalContentAlignment="Center"
+                            Background="DimGray"
+                            Minimum="0"
+                            PlaceholderText="1000"
+                            SmallChange="{Binding SmallChange}"
+                            SpinButtonPlacementMode="Compact"
+                            Value="{Binding Settings.COMReleaseTimeout}" />
+                        <ComboBox
+                            Margin="0,0,10,0"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            HorizontalContentAlignment="Left"
+                            Background="Transparent"
+                            BorderBrush="Transparent"
+                            ItemsSource="{Binding Source={StaticResource TimeTypeConverter}}"
+                            SelectedItem="{Binding Settings.TimeType}"
+                            ToolTip="Units" />
+                        <Button VerticalAlignment="Center" VerticalContentAlignment="Center">
+                            Reset
                         </Button>
-                    </StackPanel>
+                    </WrapPanel>
                 </Expander.Header>
-                <!--Make Border match content size-->
-                <Border BorderBrush="LightGray" CornerRadius="8" BorderThickness="1" Padding="5" Margin="0,5,0,0">
-                    <!--Wrap text-->
-                    <TextBlock>
-                            In fast mode a OneNote COM object is kept alive, this takes up around 40MB of RAM
-                            and is visible in the task manager.<LineBreak/><LineBreak/>
-                            Changing the COM Object release timeout sets how long before the COM object is 
-                            released once you stop typing/searching.<LineBreak/><LineBreak/>
-                            Select infinite for the COM object to be released only when Flow Launcher is exited 
-                            completely.
-                    </TextBlock>
+                <Border
+                    Margin="0,0,0,0"
+                    Padding="5"
+                    HorizontalAlignment="Left"
+                    BorderBrush="DimGray"
+                    BorderThickness="1"
+                    CornerRadius="8">
+                    <TextBlock TextWrapping="Wrap">
+                        In fast mode a OneNote COM object is kept alive, this takes up around 40MB of RAM
+                        and is visible in the task manager.<LineBreak /><LineBreak />
+                        Changing the COM Object release timeout sets how long before the COM object is
+                        released once you stop typing/searching.<LineBreak /><LineBreak />
+                        Select infinite for the COM object to be released only when Flow Launcher is exited
+                        completely.</TextBlock>
                 </Border>
             </Expander>
             <StackPanel Grid.Row="1" Orientation="Horizontal">
-                <TextBlock VerticalAlignment="Center"
-                           Margin="0,0,15,0">
-                    Show Unread Icon on Items
-                </TextBlock>
-                <ui:ToggleSwitch IsOn="{Binding Settings.ShowUnread}"
-                                 VerticalContentAlignment="Center"
-                                 Grid.Row="1">
-                </ui:ToggleSwitch>
+                <ui:ToggleSwitch
+                    Grid.Row="1"
+                    HorizontalContentAlignment="Left"
+                    VerticalContentAlignment="Center"
+                    IsOn="{Binding Settings.ShowUnread}"
+                    OffContent="Show Unread Icon on Items [Off]"
+                    OnContent="Show Unread Icon on Items [On]" />
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Grid.Row="2" VerticalAlignment="Center">
-                <TextBlock Margin="0,0,15,0"
-                           VerticalAlignment="Center">
+            <StackPanel
+                Grid.Row="2"
+                VerticalAlignment="Center"
+                Orientation="Horizontal">
+                <TextBlock Margin="0,0,15,0" VerticalAlignment="Center">
                     Default Number of Recent Pages
                 </TextBlock>
-                <ComboBox SelectedItem="{Binding Settings.DefaultRecentsCount}"
-                          ItemsSource="{Binding DefaultRecentCountOptions}"
-                          VerticalContentAlignment="Center"
-                          VerticalAlignment="Center">
-                </ComboBox>
+                <ComboBox
+                    VerticalAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    BorderBrush="Transparent"
+                    ItemsSource="{Binding DefaultRecentCountOptions}"
+                    SelectedItem="{Binding Settings.DefaultRecentsCount}" />
             </StackPanel>
         </Grid>
     </StackPanel>
