--- a/Views/SettingsView.xaml
+++ b/Views/SettingsView.xaml
@@ -10,7 +10,7 @@
     xmlns:vm="clr-namespace:Flow.Launcher.Plugin.OneNote.ViewModels"
     d:DataContext="{d:DesignInstance Type=vm:SettingsViewModel}"
     d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignWidth="900"
     mc:Ignorable="d">
 
     <UserControl.Resources>
@@ -27,116 +27,128 @@
                     <x:Type TypeName="local:TimeType" />
                 </ObjectDataProvider.MethodParameters>
             </ObjectDataProvider>
-            <Style
-                x:Key="TimeTypeStyle"
-                BasedOn="{StaticResource {x:Type ComboBox}}"
-                TargetType="{x:Type ComboBox}">
-                <Setter Property="Background" Value="Transparent" />
-                <!--  Search: wpf inherit a template  -->
-                <!--<Setter Property="Template">
-                    <Setter.Value></Setter.Value>
-                </Setter>-->
-                <Style.Resources>
-                    <Style TargetType="{x:Type ToggleButton}">
-                        <Setter Property="BorderBrush" Value="Transparent" />
-                    </Style>
-                </Style.Resources>
-                <Style.Triggers />
-            </Style>
         </ResourceDictionary>
 
     </UserControl.Resources>
-    <StackPanel Margin="60,10,10,10" Orientation="Vertical">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition MinHeight="35" />
-                <RowDefinition Height="35" />
-                <RowDefinition Height="35" />
-            </Grid.RowDefinitions>
-            <Expander
+    <Grid Margin="60,10,10,10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="110" />
+            <ColumnDefinition Width="395" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="35" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="35" />
+            <RowDefinition Height="35" />
+        </Grid.RowDefinitions>
+        <!--  row  0  -->
+        <StackPanel Grid.Column="0" Orientation="Horizontal">
+            <TextBlock
                 Grid.Row="0"
-                MinHeight="35"
+                Grid.Column="0"
+                Margin="0,0,8,0"
+                HorizontalAlignment="Left"
                 VerticalAlignment="Center"
-                VerticalContentAlignment="Center">
-                <Expander.Header>
-                    <!--  Replace with wrap panel  -->
-                    <WrapPanel VerticalAlignment="Center" Orientation="Horizontal">
-                        <ui:ToggleSwitch
-                            Margin="0,0,30,0"
-                            HorizontalContentAlignment="Left"
-                            VerticalContentAlignment="Center"
-                            IsOn="{Binding Settings.FastMode}"
-                            OffContent="Fast Mode [Off]"
-                            OnContent="Fast Mode [On]" />
-                        <TextBlock Margin="0,0,10,0" VerticalAlignment="Center">
-                            COM Object Release Timeout
-                        </TextBlock>
-                        <ui:NumberBox
-                            MinWidth="60"
-                            MaxWidth="110"
-                            Margin="0,0,5,0"
-                            VerticalAlignment="Center"
-                            VerticalContentAlignment="Center"
-                            Background="DimGray"
-                            Minimum="0"
-                            PlaceholderText="1000"
-                            SmallChange="{Binding SmallChange}"
-                            SpinButtonPlacementMode="Compact"
-                            Value="{Binding Settings.COMReleaseTimeout}" />
-                        <ComboBox
-                            Margin="0,0,10,0"
-                            HorizontalAlignment="Left"
-                            VerticalAlignment="Center"
-                            HorizontalContentAlignment="Left"
-                            Background="Transparent"
-                            BorderBrush="Transparent"
-                            ItemsSource="{Binding Source={StaticResource TimeTypeConverter}}"
-                            SelectedItem="{Binding Settings.TimeType}"
-                            ToolTip="Units" />
-                        <Button VerticalAlignment="Center" VerticalContentAlignment="Center">
-                            Reset
-                        </Button>
-                    </WrapPanel>
-                </Expander.Header>
-                <Border
-                    Margin="0,0,0,0"
-                    Padding="5"
-                    HorizontalAlignment="Left"
-                    BorderBrush="DimGray"
-                    BorderThickness="1"
-                    CornerRadius="8">
-                    <TextBlock TextWrapping="Wrap">
-                        In fast mode a OneNote COM object is kept alive, this takes up around 40MB of RAM
-                        and is visible in the task manager.<LineBreak /><LineBreak />
-                        Changing the COM Object release timeout sets how long before the COM object is
-                        released once you stop typing/searching.<LineBreak /><LineBreak />
-                        Select infinite for the COM object to be released only when Flow Launcher is exited
-                        completely.</TextBlock>
-                </Border>
-            </Expander>
-            <StackPanel Grid.Row="1" Orientation="Horizontal">
-                <ui:ToggleSwitch
-                    Grid.Row="1"
-                    HorizontalContentAlignment="Left"
-                    VerticalContentAlignment="Center"
-                    IsOn="{Binding Settings.ShowUnread}"
-                    OffContent="Show Unread Icon on Items [Off]"
-                    OnContent="Show Unread Icon on Items [On]" />
-            </StackPanel>
-            <StackPanel
-                Grid.Row="2"
+                Text="Fast Mode" />
+            <ToggleButton
                 VerticalAlignment="Center"
-                Orientation="Horizontal">
-                <TextBlock Margin="0,0,15,0" VerticalAlignment="Center">
-                    Default Number of Recent Pages
-                </TextBlock>
-                <ComboBox
-                    VerticalAlignment="Center"
-                    VerticalContentAlignment="Center"
-                    BorderBrush="Transparent"
-                    ItemsSource="{Binding DefaultRecentCountOptions}"
-                    SelectedItem="{Binding Settings.DefaultRecentsCount}" />
-            </StackPanel>
-        </Grid>
-    </StackPanel>
+                VerticalContentAlignment="Center"
+                Content="?" />
+        </StackPanel>
+        <ui:ToggleSwitch
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            HorizontalContentAlignment="Left"
+            VerticalContentAlignment="Center"
+            IsOn="{Binding Settings.FastMode}"
+            OffContent="Off"
+            OnContent="On" />
+        <StackPanel
+            Grid.Row="0"
+            Grid.Column="2"
+            Orientation="Horizontal">
+            <TextBlock
+                Margin="0,0,20,0"
+                VerticalAlignment="Center"
+                Text="COM Object Release Timeout" />
+            <ui:NumberBox
+                MinWidth="60"
+                MaxWidth="110"
+                Margin="0,0,0,0"
+                VerticalAlignment="Center"
+                VerticalContentAlignment="Center"
+                Minimum="0"
+                PlaceholderText="1000"
+                SmallChange="{Binding SmallChange}"
+                SpinButtonPlacementMode="Compact"
+                Value="{Binding Settings.COMReleaseTimeout}" />
+            <ComboBox
+                Margin="0,0,10,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Left"
+                VerticalContentAlignment="Center"
+                Background="Transparent"
+                BorderBrush="Transparent"
+                ItemsSource="{Binding Source={StaticResource TimeTypeConverter}}"
+                SelectedItem="{Binding Settings.TimeType}"
+                ToolTip="Units" />
+        </StackPanel>
+        <Button
+            Grid.Row="0"
+            Grid.Column="4"
+            VerticalAlignment="Center"
+            VerticalContentAlignment="Center"
+            Content="Reset"
+            ToolTip="Reset to default" />
+        <!--  row 1  -->
+        <Border
+            Grid.Row="1"
+            Grid.ColumnSpan="4"
+            Margin="0,5,0,5"
+            Padding="5"
+            HorizontalAlignment="Left"
+            BorderBrush="DimGray"
+            BorderThickness="1"
+            CornerRadius="8">
+            <TextBlock TextWrapping="Wrap">
+                In fast mode a OneNote COM object is kept alive, this takes up around 40MB of RAM and is visible in the task manager.<LineBreak /><LineBreak />
+                Changing the COM Object release timeout sets how long before the COM object is released once you stop typing/searching.<LineBreak /><LineBreak />
+                Select infinite for the COM object to be released only when Flow Launcher is exited completely.</TextBlock>
+        </Border>
+        <!--  row 2  -->
+        <TextBlock
+            Grid.Row="2"
+            Grid.Column="0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Text="Show Unread Icon on Items" />
+        <ui:ToggleSwitch
+            Grid.Row="2"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            HorizontalContentAlignment="Left"
+            VerticalContentAlignment="Center"
+            IsOn="{Binding Settings.ShowUnread}"
+            OffContent="Off"
+            OnContent="On" />
+        <!--  row 3  -->
+        <TextBlock
+            Grid.Row="3"
+            Grid.Column="0"
+            Margin="0,0,25,0"
+            VerticalAlignment="Center"
+            Text="Default Number of Recent Pages" />
+        <ComboBox
+            Grid.Row="3"
+            Grid.Column="1"
+            VerticalAlignment="Center"
+            VerticalContentAlignment="Center"
+            BorderBrush="Transparent"
+            ItemsSource="{Binding DefaultRecentCountOptions}"
+            SelectedItem="{Binding Settings.DefaultRecentsCount}" />
+    </Grid>
 </UserControl>
